# apps/api/src/auth/auth-middleware.ts
@@ -8,6 +8,7 @@ import type { validateRegisterSchema } from "./auth-schema";
 import type { RegisterUser } from "./types";
 import type { NextFunction, Request, Response } from "express";
 import type { InferType } from "yup";
+import { createTokenJWT } from "./tokenJWT";
 
 export const checkThePassword = async (
   req: Request<unknown, unknown, RegisterUser>,
@@ -19,7 +20,7 @@ export const checkThePassword = async (
   const isCorrectPass = await Bcrypt.compare(req.body.password, user.password);
   if (!isCorrectPass)
     return next(new HttpError(401, "Check email and password!"));
-  res.status(200).send({ id: user.id });
+  res.status(200).send({ userId: user.id, token: createTokenJWT(user.id) });
 };
 
 export const checkUserExist = async (
@@ -29,6 +30,6 @@ export const checkUserExist = async (
 ) => {
   const user: InferType<typeof validateRegisterSchema> = req.body;
   const userFromDb = await authService.getUser(user);
-  if (userFromDb) next(new HttpError(400, "Email is used!"));
+  if (userFromDb) next(new HttpError(400, "Email or username is used!"));
   next();
 };
